# mindsolver

./: .gitignore  Cargo.toml  README.md  build_deploy.sh  profile.json  without_hardware.sh
.cargo/: config.toml
scan_test_files/: hard_to_solve.txt  solvable.txt
scan_test_files/modified_cube/: 1.txt  2024-06-05_04-04-22  2024-06-05_04-07-49  2024-06-05_04-11-39  2024-06-05_04-15-04  2024-06-05_04-17-27  2024-06-05_04-21-12  2024-06-05_04-24-17
scan_test_files/official_cube_solved/: 2024-06-05_23-36-17  2024-06-05_23-38-05  2024-06-05_23-39-08  2024-06-05_23-40-12  2024-06-05_23-41-15  2024-06-05_23-42-19  2024-06-05_23-43-23  2024-06-05_23-44-26  2024-06-05_23-45-30  2024-06-05_23-46-34  2024-06-05_23-47-38  2024-06-05_23-48-42  2024-06-05_23-49-46  2024-06-05_23-50-50  2024-06-05_23-51-54  2024-06-05_23-52-58  2024-06-05_23-54-02  2024-06-05_23-55-05  2024-06-05_23-56-09  2024-06-05_23-57-13  2024-06-05_23-58-17  2024-06-05_23-59-21  2024-06-06_00-00-24  2024-06-06_00-01-28  2024-06-06_00-02-32  2024-06-06_00-03-35  2024-06-06_00-04-39  2024-06-06_00-05-43  2024-06-06_00-06-46  2024-06-06_00-07-50  2024-06-06_00-08-54  2024-06-06_00-09-57  2024-06-06_00-11-01  2024-06-06_00-12-05  2024-06-06_00-13-08
src/: classification.rs  constants.rs  cube.rs  fixer.rs  hardware.rs  knn.rs  main.rs  utils.rs
