[package]
name = "rubiks-cube-robot-rust"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "3.2.25", features = ["derive"] }
colored = "2.1.0"
ev3dev-lang-rust = "0.14.0"
paris = { version = "1.5", features = ["no_logger","timestamps","macros"] }
rand = "0.8.5"

[profile.release]
lto = true
strip = "debuginfo"
