[package]
name = "mindsolver"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
ctrlc = "3.4.4"
ev3dev-lang-rust = "0.14.0"
itertools = "0.13.0"
kewb = "0.4.2"
paris = { version = "1.5", features = ["no_logger","timestamps","macros"] }
rand = "0.8.5"

[profile.release]
lto = true
strip = "debuginfo"
